--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -1,169 +1,173 @@
   <nz-card nzTitle="Revisions"
     class="card-list">
-    <nz-collapse class="revision-list" *ngIf="revisions && revisions.length > 0">
+    <nz-collapse class="revision-list" *ngIf="revisions && revisions.length > 0; else noRevisions">
       <nz-collapse-panel *ngFor="let revision of untypedRevisons" [nzHeader]="revCardHeaderTitle" [nzExtra]="revCardHeaderExtra" [nzActive]="true">
-            <ng-container [ngSwitch]="revision.fieldName">
-              <ng-container *ngSwitchCase="'source_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Sources">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-source-tag [source]="item"></cvc-source-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'disease_id'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Disease">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-disease-tag [disease]="{id: item.id, name: item.displayName}"></cvc-disease-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'drug_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Drugs">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-drug-tag [drug]="{id: item.id, name: item.displayName}"></cvc-drug-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'variant_alias_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Variant Aliases">
-                  <ng-template #itemTemplate let-item>
-                    <nz-tag>
-                      {{ item.displayName }}
-                    </nz-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'clinvar_entry_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="ClinVar Entries">
-                  <ng-template #itemTemplate let-item>
-                    <nz-tag>
-                      {{ item.displayName }}
-                    </nz-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'hgvs_expression_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="HGVS Expressions">
-                  <ng-template #itemTemplate let-item>
-                    <nz-tag>
-                      {{ item.displayName }}
-                    </nz-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'variant_type_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Variant Types">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-variant-type-tag [variantType]="{id: item.id, name: item.displayName}"></cvc-variant-type-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'phenotype_ids'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Phenotypes">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-phenotype-tag [phenotype]="{id: item.id, name: item.displayName}"></cvc-phenotype-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'variant_id'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Variant">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-variant-tag [variant]="{id: item.id, name: item.displayName}"></cvc-variant-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchCase="'source_id'">
-                <cvc-revision-list-diff
-                  [diffObject]="revision.linkoutData.diffValue"
-                  entityType="Source">
-                  <ng-template #itemTemplate let-item>
-                    <cvc-source-tag [source]="item"></cvc-source-tag>
-                  </ng-template>
-                </cvc-revision-list-diff>
-              </ng-container>
-              <ng-container *ngSwitchDefault>
-                <!-- default text diff -->
-                <cvc-revision-value-diff
-                  [currentValue]="revision.currentValue"
-                  [suggestedValue]="revision.suggestedValue"
-                  [left]="revision.linkoutData.diffValue.left"
-                  [right]="revision.linkoutData.diffValue.right"
-                  [entityType]="revision.linkoutData.name" ></cvc-revision-value-diff>
-                  </ng-container>
-            </ng-container>
-            <nz-card-meta [nzDescription]="moderationButtons">
-            </nz-card-meta>
-            <ng-template #moderationButtons>
-              <div nz-row
-                style="margin-top: 1em;">
-                <div nz-col
-                  nzSpan="24"
-                  style="text-align: right;">
-                  <nz-space nzDirection="horizontal">
-                    <nz-space-item>
-                      <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-                        <button type="submit"
-                          nz-button
-                          cvcOrgSelectorBtn
-                          nzType="primary"
-                          nzSize="small">
-                          Reject Revision
-                        </button>
-                      </cvc-org-selector-btn-group>
-                    </nz-space-item>
-                    <nz-space-item>
-                      <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-                        <button type="submit"
-                          nz-button
-                          cvcOrgSelectorBtn
-                          nzType="primary"
-                          nzSize="small">
-                          Accept Revision
-                        </button>
-                      </cvc-org-selector-btn-group>
-                    </nz-space-item>
-                  </nz-space>
-                </div>
-              </div>
+        <ng-container [ngSwitch]="revision.fieldName">
+          <ng-container *ngSwitchCase="'source_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Sources">
+              <ng-template #itemTemplate let-item>
+                <cvc-source-tag [source]="item"></cvc-source-tag>
               </ng-template>
-
-          <!-- header title -->
-          <ng-template #revCardHeaderTitle>
-            <i nz-icon
-              nzType="civic:revision"></i> RID{{ revision.id }}
-            <span>{{ revision.linkoutData.name }} Updated</span>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'disease_id'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Disease">
+              <ng-template #itemTemplate let-item>
+                <cvc-disease-tag [disease]="{id: item.id, name: item.displayName}"></cvc-disease-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'drug_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Drugs">
+              <ng-template #itemTemplate let-item>
+                <cvc-drug-tag [drug]="{id: item.id, name: item.displayName}"></cvc-drug-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'variant_alias_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Variant Aliases">
+              <ng-template #itemTemplate let-item>
+                <nz-tag>
+                  {{ item.displayName }}
+                </nz-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'clinvar_entry_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="ClinVar Entries">
+              <ng-template #itemTemplate let-item>
+                <nz-tag>
+                  {{ item.displayName }}
+                </nz-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'hgvs_expression_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="HGVS Expressions">
+              <ng-template #itemTemplate let-item>
+                <nz-tag>
+                  {{ item.displayName }}
+                </nz-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'variant_type_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Variant Types">
+              <ng-template #itemTemplate let-item>
+                <cvc-variant-type-tag [variantType]="{id: item.id, name: item.displayName}"></cvc-variant-type-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'phenotype_ids'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Phenotypes">
+              <ng-template #itemTemplate let-item>
+                <cvc-phenotype-tag [phenotype]="{id: item.id, name: item.displayName}"></cvc-phenotype-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'variant_id'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Variant">
+              <ng-template #itemTemplate let-item>
+                <cvc-variant-tag [variant]="{id: item.id, name: item.displayName}"></cvc-variant-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchCase="'source_id'">
+            <cvc-revision-list-diff
+              [diffObject]="revision.linkoutData.diffValue"
+              entityType="Source">
+              <ng-template #itemTemplate let-item>
+                <cvc-source-tag [source]="item"></cvc-source-tag>
+              </ng-template>
+            </cvc-revision-list-diff>
+          </ng-container>
+          <ng-container *ngSwitchDefault>
+            <!-- default text diff -->
+            <cvc-revision-value-diff
+              [currentValue]="revision.currentValue"
+              [suggestedValue]="revision.suggestedValue"
+              [left]="revision.linkoutData.diffValue.left"
+              [right]="revision.linkoutData.diffValue.right"
+              [entityType]="revision.linkoutData.name" ></cvc-revision-value-diff>
+              </ng-container>
+        </ng-container>
+        <nz-card-meta [nzDescription]="moderationButtons">
+        </nz-card-meta>
+        <ng-template #moderationButtons>
+          <div nz-row
+            style="margin-top: 1em;">
+            <div nz-col
+              nzSpan="24"
+              style="text-align: right;">
+              <nz-space nzDirection="horizontal">
+                <nz-space-item>
+                  <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
+                    <button type="submit"
+                      nz-button
+                      cvcOrgSelectorBtn
+                      nzType="primary"
+                      nzSize="small">
+                      Reject Revision
+                    </button>
+                  </cvc-org-selector-btn-group>
+                </nz-space-item>
+                <nz-space-item>
+                  <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
+                    <button type="submit"
+                      nz-button
+                      cvcOrgSelectorBtn
+                      nzType="primary"
+                      nzSize="small">
+                      Accept Revision
+                    </button>
+                  </cvc-org-selector-btn-group>
+                </nz-space-item>
+              </nz-space>
+            </div>
+          </div>
           </ng-template>
 
-          <!-- header secondary & status -->
-          <ng-template #revCardHeaderExtra>
-            <nz-space nzSize="small">
-              <nz-space-item>
-                <span nz-typography nzType="secondary">Submitted By</span>
-                <cvc-user-tag [user]="revision.revisor"></cvc-user-tag>
-                <span nz-typography nzType="secondary">{{ revision.createdAt | timeago }}</span>
-              </nz-space-item>
-              <nz-space-item>
-                <nz-tag>{{ revision.status }}</nz-tag>
-              </nz-space-item>
-            </nz-space>
-          </ng-template>
-      </nz-collapse-panel>
-    </nz-collapse>
+      <!-- header title -->
+      <ng-template #revCardHeaderTitle>
+        <i nz-icon
+          nzType="civic:revision"></i> RID{{ revision.id }}
+        <span>{{ revision.linkoutData.name }} Updated</span>
+      </ng-template>
+
+      <!-- header secondary & status -->
+      <ng-template #revCardHeaderExtra>
+        <nz-space nzSize="small">
+          <nz-space-item>
+            <span nz-typography nzType="secondary">Submitted By</span>
+            <cvc-user-tag [user]="revision.revisor"></cvc-user-tag>
+            <span nz-typography nzType="secondary">{{ revision.createdAt | timeago }}</span>
+          </nz-space-item>
+          <nz-space-item>
+            <nz-tag>{{ revision.status }}</nz-tag>
+          </nz-space-item>
+        </nz-space>
+      </ng-template>
+    </nz-collapse-panel>
+  </nz-collapse>
+  <ng-template #noRevisions>
+    <nz-empty nzNotFoundImage="simple" nzNotFoundContent="No Revisions matching filters"></nz-empty>
+  </ng-template>
+</nz-card>
