--- a/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
+++ b/client/src/app/components/revisions/revisions-list-and-filter/revisions-list-and-filter.component.html
@@ -1,27 +1,32 @@
-<nz-row [nzGutter]="16">
-  <nz-col nzSpan="18">
-    <cvc-revision-list [revisions]="revisions$ | ngrxPush"></cvc-revision-list>
-  </nz-col>
-  <nz-col nzSpan="6">
-    <cvc-participant-list listTitle="Revision Status" [preselectedOption]="this.selectableStatuses[0]" [participantList]="selectableStatuses" (participantSelectedEvent)="onStatusSelected($event)">
-      <ng-template #itemTemplate let-status>
-        <span>{{status.displayName}}</span>
-      </ng-template>
-    </cvc-participant-list>
-    <cvc-participant-list listTitle="Revisors" [participantList]="uniqueRevisors$ | ngrxPush" (participantSelectedEvent)="onRevisorSelected($event)">
-      <ng-template #itemTemplate let-user>
-        <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
-        </nz-avatar>
-        <ng-template #noAvatar>
-            <nz-avatar nz-comment-avatar [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
+<ng-container *ngIf="unfilteredCount$ | ngrxPush as unfilteredCount; else noRevisions">
+  <nz-row [nzGutter]="16">
+    <nz-col nzSpan="18">
+      <cvc-revision-list [revisions]="revisions$ | ngrxPush"></cvc-revision-list>
+    </nz-col>
+    <nz-col nzSpan="6">
+      <cvc-participant-list listTitle="Revision Status" [preselectedOption]="this.selectableStatuses[0]" [participantList]="selectableStatuses" (participantSelectedEvent)="onStatusSelected($event)">
+        <ng-template #itemTemplate let-status>
+          <span>{{status.displayName}}</span>
         </ng-template>
-        <span>{{user.username}}</span>
-      </ng-template>
-    </cvc-participant-list>
-    <cvc-participant-list listTitle="Fields Revised" [participantList]="revisionFields$ | ngrxPush" (participantSelectedEvent)="onFieldNameSelected($event)">
-      <ng-template #itemTemplate let-field>
-        <span>{{field.displayName}}</span>
-      </ng-template>
-    </cvc-participant-list>
-  </nz-col>
-</nz-row>
+      </cvc-participant-list>
+      <cvc-participant-list listTitle="Revisors" [participantList]="uniqueRevisors$ | ngrxPush" (participantSelectedEvent)="onRevisorSelected($event)">
+        <ng-template #itemTemplate let-user>
+          <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
+          </nz-avatar>
+          <ng-template #noAvatar>
+              <nz-avatar nz-comment-avatar [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
+          </ng-template>
+          <span>{{user.username}}</span>
+        </ng-template>
+      </cvc-participant-list>
+      <cvc-participant-list listTitle="Fields Revised" [participantList]="revisionFields$ | ngrxPush" (participantSelectedEvent)="onFieldNameSelected($event)">
+        <ng-template #itemTemplate let-field>
+          <span>{{field.displayName}}</span>
+        </ng-template>
+      </cvc-participant-list>
+    </nz-col>
+  </nz-row>
+</ng-container>
+<ng-template #noRevisions>
+  <nz-empty nzNotFoundImage="simple" nzNotFoundContent="Entity has no Revisions"></nz-empty>
+</ng-template>
