--- a/client/src/app/components/shared/status-tag/status-tag.component.html
+++ b/client/src/app/components/shared/status-tag/status-tag.component.html
@@ -3,6 +3,8 @@
     <i *ngSwitchCase="'success'" nz-icon nzType="check-circle"></i>
     <i *ngSwitchCase="'error'" nz-icon nzType="close-circle"></i>
     <i *ngSwitchCase="'warning'" nz-icon nzType="exclamation-circle"></i>
+    <i *ngSwitchCase="'processing'" nz-icon></i>
+    <i *ngSwitchCase="'default'" nz-icon></i>
   </ng-container>
   {{ status | titlecase }}
 </nz-tag>
