--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -1,5 +1,5 @@
   <nz-alert *ngFor="let error of this.errors" nzBanner [nzMessage]="error" nzType="error" nzCloseable (nzOnClose)="onErrorBannerClose(error)"></nz-alert>
-  <nz-alert *ngIf="this.success" nzBanner nzMessage="Revision(s) successfully applied." nzType="error" nzCloseable (nzOnClose)="onSuccessBannerClose()"></nz-alert>
+  <nz-alert *ngIf="this.success" nzBanner nzMessage="Revision(s) successfully applied." nzType="success" nzCloseable (nzOnClose)="onSuccessBannerClose()"></nz-alert>
   <nz-card nzTitle="Revisions"
     class="card-list" [nzExtra]="moderationButtons">
     <nz-collapse class="revision-list" *ngIf="revisions && revisions.length > 0; else noRevisions">
@@ -157,6 +157,7 @@
   </ng-template>
 </nz-card>
 <ng-template #moderationButtons>
+  <ng-container *ngrxLet="validationErrors$ as validationErrors">
   <div nz-row
     style="margin-top: 1em;">
     <div nz-col
@@ -164,33 +165,21 @@
       style="text-align: right;">
       <nz-space nzDirection="horizontal">
         <nz-space-item>
-          <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-            <button type="submit"
-              nz-button
-              [nzLoading]="isLoading"
-              cvcOrgSelectorBtn
-              nzSize="small"
-              [disabled]="this.selectedRevisionIds.length === 0"
-              nzDanger>
-              Reject Revision
-            </button>
-          </cvc-org-selector-btn-group>
+          <button
+            nz-button
+            nz-popover
+            nzSize="small"
+            nzPopoverTitle="Review Selected Revisions"
+            [(nzPopoverVisible)]="validationPopoverVisible"
+            nzPopoverTrigger="click"
+            [nzPopoverContent]="validationPopoverContentTemplate"
+            nzPopoverPlacement="bottom"
+            [disabled]="this.selectedRevisionIds.length === 0"
+          >
+            Review Selected Revisions
+            <i nz-icon nzType="caret-down" nzTheme="outline"></i>
+          </button>
         </nz-space-item>
-        <ng-container *ngrxLet="validationErrors$ as validationErrors">
-          <nz-space-item>
-              <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
-                <button type="submit"
-                  nz-button
-                  [nzLoading]="isLoading"
-                  cvcOrgSelectorBtn
-                  nzSize="small"
-                  [disabled]="this.selectedRevisionIds.length === 0 || validationErrors.length > 0"
-                  (click)="onAcceptRevisionClicked()"
-                  >
-                  Accept Revision
-                </button>
-              </cvc-org-selector-btn-group>
-          </nz-space-item>
           <nz-space-item>
               <i nz-icon *ngIf="validationErrors.length > 0" nzType="question-circle" nzTheme="outline"
                 nz-popover nzPopoverTitle="Selected Revisions would result in an invalid entity" [nzPopoverContent]="validationErrorTemplate"  
@@ -201,8 +190,61 @@
                 </nz-list>
               </ng-template>
           </nz-space-item>
-        </ng-container>
       </nz-space>
+      <ng-template #validationPopoverContentTemplate>
+        <nz-space nzDirection="vertical">
+          <nz-space-item>
+            <textarea rows="4" nz-input [(ngModel)]="revisionComment" placeholder="Additional comments (required if rejecting)"></textarea>
+          </nz-space-item>
+          <nz-space-item>
+            <nz-space>
+              <nz-space-item>
+                <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
+                  <button type="submit"
+                    nz-button
+                    [nzLoading]="isLoading"
+                    cvcOrgSelectorBtn
+                    nzSize="small"
+                    nzDanger
+                    [disabled]="this.revisionComment === undefined || this.revisionComment.length === 0"
+                    >
+                    Reject Revision
+                  </button>
+                </cvc-org-selector-btn-group>
+              </nz-space-item>
+              <nz-space-item>
+                <cvc-org-selector-btn-group [(selectedOrg)]="this.mostRecentOrg">
+                  <button type="submit"
+                    nz-button
+                    [nzLoading]="isLoading"
+                    cvcOrgSelectorBtn
+                    nzSize="small"
+                    [disabled]="validationErrors.length > 0"
+                    (click)="onAcceptRevisionClicked()"
+                    >
+                    Accept Revision
+                  </button>
+                </cvc-org-selector-btn-group>
+              </nz-space-item>
+              <nz-space-item>
+                  <i nz-icon *ngIf="validationErrors.length > 0" nzType="question-circle" nzTheme="outline"
+                    nz-popover nzPopoverTitle="Selected Revisions would result in an invalid entity" [nzPopoverContent]="validationErrorTemplate"  
+                  ></i>
+                  <ng-template #validationErrorTemplate>
+                    <nz-list nzBordered nzSize="small">
+                      <nz-list-item *ngFor="let error of validationErrors">{{ error }}</nz-list-item>
+                    </nz-list>
+                  </ng-template>
+              </nz-space-item>
+            </nz-space>
+            <!--
+
+            <a (click)="clickMe()">Close</a>
+            -->
+          </nz-space-item>
+        </nz-space>
+      </ng-template>
     </div>
   </div>
+  </ng-container>
   </ng-template>
