--- a/client/src/app/components/revisions/revision-list/revision-list.component.html
+++ b/client/src/app/components/revisions/revision-list/revision-list.component.html
@@ -1,5 +1,5 @@
   <nz-alert *ngFor="let error of this.errors" nzBanner [nzMessage]="error" nzType="error" nzCloseable (nzOnClose)="onErrorBannerClose(error)"></nz-alert>
-  <nz-alert *ngIf="this.success" nzBanner nzMessage="Revision(s) successfully applied." nzType="success" nzCloseable (nzOnClose)="onSuccessBannerClose()"></nz-alert>
+  <nz-alert *ngIf="this.success" nzBanner nzMessage="Revision(s) successfully {{this.success}}." nzType="success" nzCloseable (nzOnClose)="onSuccessBannerClose()"></nz-alert>
   <nz-card nzTitle="Revisions"
     class="card-list" [nzExtra]="moderationButtons">
     <nz-collapse class="revision-list" *ngIf="revisions && revisions.length > 0; else noRevisions">
@@ -118,9 +118,16 @@
         </ng-container>
       <!-- header title -->
       <ng-template #revCardHeaderTitle>
+        <nz-space>
+          <nz-space-item>
             <i nz-icon
               nzType="civic:revision"></i> RID{{ revision.id }}
             <span>{{ revision.linkoutData.name }} Updated</span>
+          </nz-space-item>
+          <nz-space-item>
+            <i nz-popover [nzPopoverContent]="revision.comments[0].comment" *ngIf="revision.comments.length > 0" nz-icon nzType="comment" nzTheme="outline"></i>
+          </nz-space-item>
+        </nz-space>
       </ng-template>
 
       <!-- header secondary & status -->
@@ -169,10 +176,11 @@
             nz-button
             nz-popover
             nzSize="small"
-            nzPopoverTitle="Review Selected Revisions"
+            [nzPopoverTitle]="validationPopoverTitleTemplate"
             [(nzPopoverVisible)]="validationPopoverVisible"
-            nzPopoverTrigger="click"
+            (click)="this.validationPopoverVisible = !this.validationPopoverVisible"
             [nzPopoverContent]="validationPopoverContentTemplate"
+            [nzPopoverTrigger]="undefined "
             nzPopoverPlacement="bottom"
             [disabled]="this.selectedRevisionIds.length === 0"
           >
@@ -190,11 +198,17 @@
                 </nz-list>
               </ng-template>
           </nz-space-item>
-      </nz-space>
+      </nz-space> 
+      <ng-template #validationPopoverTitleTemplate>
+        Review Selected Revisions
+        <span [ngStyle]="{ 'float': 'right' }">
+          <i nz-icon nzType="close" nzTheme="outline" (click)="this.validationPopoverVisible = false"></i>
+        </span>
+      </ng-template>
       <ng-template #validationPopoverContentTemplate>
         <nz-space nzDirection="vertical">
           <nz-space-item>
-            <textarea rows="4" nz-input [(ngModel)]="revisionComment" placeholder="Additional comments (required if rejecting)"></textarea>
+            <textarea rows="4" nz-input [(ngModel)]="revisionComment" placeholder="Additional comments (required if rejecting, minimum 10 characters)"></textarea>
           </nz-space-item>
           <nz-space-item>
             <nz-space>
@@ -206,7 +220,8 @@
                     cvcOrgSelectorBtn
                     nzSize="small"
                     nzDanger
-                    [disabled]="this.revisionComment === undefined || this.revisionComment.length === 0"
+                    [disabled]="this.revisionComment === undefined || this.revisionComment.length < 10"
+                    (click)="onRejectRevisionsClicked()"
                     >
                     Reject Revision
                   </button>
@@ -219,7 +234,7 @@
                     [nzLoading]="isLoading"
                     cvcOrgSelectorBtn
                     nzSize="small"
-                    [disabled]="validationErrors.length > 0"
+                    [disabled]="!(validationErrors.length == 0 && (this.revisionComment === undefined || this.revisionComment === '' || this.revisionComment.length >= 10))"
                     (click)="onAcceptRevisionClicked()"
                     >
                     Accept Revision
@@ -237,10 +252,6 @@
                   </ng-template>
               </nz-space-item>
             </nz-space>
-            <!--
-
-            <a (click)="clickMe()">Close</a>
-            -->
           </nz-space-item>
         </nz-space>
       </ng-template>
