Redesign entity flag pages
TODO:
- Figure out why the org selection from mostRecentOrg on the viewer
  doesn't work when using the flag-add component on pages without any
  existing flags
- The Formly formOptions.resetModel is undefined so we can't call
  `this.formOptoins.resetModel()`. This is needed to reset the comment
  text after successful flag submission.

--- a/client/src/app/components/shared/participant-list/participant-list.component.html
+++ b/client/src/app/components/shared/participant-list/participant-list.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="participantList">
+<ng-container *ngIf="participantList && participantList.length > 0">
     <nz-card [nzTitle]="listTitle" nz-type="inner" style="margin-bottom: 1em">
         <nz-list>
             <ng-container *ngFor="let u of participantList; let i = index">
