--- a/client/src/app/components/flags/flag-list/flag-list.component.html
+++ b/client/src/app/components/flags/flag-list/flag-list.component.html
@@ -1,46 +1,58 @@
-<nz-card *ngIf="flags$ | ngrxPush as flags"
-  nzTitle="Flags"
-  nz-type="inner"
-  style="margin-bottom: 1em;">
-  Show
-  <nz-radio-group [(ngModel)]="stateFilter"
-    (ngModelChange)="fetchFlags($event)">
-    <label nz-radio-button
-      nzValue="open"><span>Open Only</span></label>
-    <label nz-radio-button
-      nzValue="resolved"><span>Resolved Only</span></label>
-    <label nz-radio-button
-      nzValue="all"><span>All</span></label>
-  </nz-radio-group>
-  <nz-list nzDirection="vertical"
-    style="width: 100%">
-    <!-- TODO: this needs to be replaced with cvc-flag-resolve, which provide org-select -->
-    <nz-list-item *ngFor="let f of flags.edges">
-      <nz-card style="width: 100%">
-        <cvc-user-tag [user]="f.node.flaggingUser"></cvc-user-tag>
-        flagged this entity {{ f.node.createdAt|timeago }}
-        <p>{{ f.node.openComment.comment }}</p>
-        <ng-container *ngIf="f.node.state === 'RESOLVED'">
-          <cvc-user-tag [user]="f.node.resolvingUser"></cvc-user-tag>
-          resolved flag {{ f.node.resolvedAt|timeago }}
-          <p>{{ f.node.resolutionComment?.comment }}</p>
-        </ng-container>
-        <ng-container *ngIf="userId$ | ngrxPush as loggedInUserId">
-          <ng-container *ngrxLet="canResolveOtherFlags$ as canResolveOtherFlags">
-            <button *ngIf="f.node.state === 'OPEN' && canResolve(f.node.flaggingUser.id, canResolveOtherFlags, loggedInUserId)"
-              (click)="resolveClicked(f.node.id)"
-              nz-button>Resolve</button>
+<nz-alert *ngFor="let error of this.errors" nzBanner [nzMessage]="error" nzType="error" nzCloseable (nzOnClose)="onErrorBannerClose(error)"></nz-alert>
+<nz-alert *ngIf="this.success" nzBanner nzMessage="Revision(s) successfully {{this.success}}." nzType="success" nzCloseable (nzOnClose)="onSuccessBannerClose()"></nz-alert>
+<nz-card nzTitle="Flags"
+  class="card-list">
+  <ng-container *ngIf="flags && flags.length > 0; else noFlags">
+    <nz-space nzDirection="vertical">
+      <nz-space-item *ngFor="let flag of flags">
+        <nz-card 
+          [nzTitle]="flagCardHeaderTitle"
+          [nzExtra]="flagCardHeaderExtra"
+          nzType="inner">
+          {{flag.openComment.comment}}
+          <nz-divider></nz-divider>
+          <ng-container *ngIf="flag.state == 'OPEN'; else flagResolved">
+            <cvc-flag-resolve [flagId]="flag.id" [flagResolvedCallback]="flagResolvedCallback"></cvc-flag-resolve>
           </ng-container>
-        </ng-container>
-      </nz-card>
-    </nz-list-item>
-  </nz-list>
+          <ng-template #flagResolved>
+          <nz-row>
+            <nz-col nzSpan="18">
+            <ng-container *ngIf="flag.resolutionComment">
+              {{ flag.resolutionComment.comment }}
+            </ng-container>
+
+            </nz-col>
+            <nz-col nzSpan="6" nz-typography nzType="secondary">
+              Resolved By
+              <cvc-user-tag *ngIf="flag.resolvingUser !== undefined" [user]="flag.resolvingUser"></cvc-user-tag>
+              {{ flag.resolvedAt | timeago }}
+            </nz-col>
+          </nz-row>
+          </ng-template>
+
+          <!-- header title -->
+          <ng-template #flagCardHeaderTitle>
+            <i nz-icon nzType="civic:flag"></i> FID{{ flag.id }}
+          </ng-template>
+
+          <!-- header secondary & status -->
+          <ng-template #flagCardHeaderExtra>
+            <nz-space nzSize="small">
+              <nz-space-item>
+                <span nz-typography nzType="secondary">Flagged By</span>
+                <cvc-user-tag [user]="flag.flaggingUser"></cvc-user-tag>
+                <span nz-typography nzType="secondary">{{ flag.createdAt | timeago }}</span>
+              </nz-space-item>
+              <nz-space-item>
+                <cvc-status-tag [status]="flag.state"></cvc-status-tag>
+              </nz-space-item>
+            </nz-space>
+          </ng-template>
+        </nz-card>
+      </nz-space-item>
+    </nz-space>
+  </ng-container>
+  <ng-template #noFlags>
+    <nz-empty nzNotFoundImage="simple" nzNotFoundContent="No Flags matching filters"></nz-empty>
+  </ng-template>
 </nz-card>
-<ng-container *ngIf="userId$ | ngrxPush as loggedInUserId">
-  <nz-card nzTitle="Add a Flag"
-    nz-type="inner"
-    style="min-height: 150px;">
-    <cvc-flag-add [flaggable]="flaggable"
-      [flagAddedCallback]="refresh"></cvc-flag-add>
-  </nz-card>
-</ng-container>
