--- a/client/src/app/components/phenotypes/phenotype-popover/phenotype-popover.component.html
+++ b/client/src/app/components/phenotypes/phenotype-popover/phenotype-popover.component.html
@@ -23,7 +23,7 @@
         </nz-descriptions-item>
         <nz-descriptions-item nzTitle="Evidence"
           nzSpan="2">
-          {{p.evidenceCount}}
+          {{p.evidenceItemCount}}
         </nz-descriptions-item>
       </nz-descriptions>
     </nz-card>
