--- a/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
+++ b/client/src/app/views/diseases/diseases-detail/diseases-detail.component.html
@@ -16,6 +16,13 @@
     </nz-page-header-extra>
     <nz-page-header-content>
       <div class="content">
+      <nz-descriptions nzSize="small"
+        [nzColumn]="1"
+        nzBordered="true">
+        <nz-descriptions-item *ngIf="disease.diseaseAliases.length > 0" nzTitle="Aliases" nzSpan="2">
+          {{ disease.diseaseAliases.join(', ') }}
+        </nz-descriptions-item>
+        </nz-descriptions>
         <router-outlet></router-outlet>
       </div>
     </nz-page-header-content>
